--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,254 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Poppins", sans-serif;
 }
+
+.container {
+  background: #000;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
+
+.logo {
+  color: grey;
+  text-align: center;
+  height: 150px;
+  font-size: 75px;
+  margin: 0px;
+}
+
+.form {
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+
+  min-width: 400px;
+  width: 30%;
+  height: 300px;
+
+  align-items: center;
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  margin: auto;
+}
+
+.text-input {
+  width: 100%;
+  height: 40px;
+  margin: 5px 0px 5px 0px;
+  padding: 3px 7px;
+  font-size: 17px;
+  font-family: inherit;
+}
+
+.btn-layout {
+  width: 50%;
+  display: inline-block;
+}
+
+.btn {
+  display: inline-block;
+  color: #000;
+  width: calc(100% - 5px);
+  border: none;
+  padding: 5px 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: inherit;
+}
+
+.btn-left {
+  margin: 5px 5px 5px 0px;
+  background: whitesmoke;
+  height: 40px;
+}
+
+.btn-right {
+  margin: 5px 0px 5px 5px;
+  background: rgb(177, 158, 158);
+  height: 40px;
+}
+
+.btn-start {
+  margin: 15px 0px 5px 0px;
+  height: auto;
+  width: 200%;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.lobby {
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+
+  min-width: 400px;
+  width: 70%;
+  height: 300px;
+
+  align-items: center;
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  margin: auto;
+}
+
+.list-player {
+  display: inline-table;
+  background: rgb(48, 46, 46);
+  color: #fff;
+  padding: 20px 20px 60px;
+  width: 60%;
+  margin: 0px;
+}
+
+.list-player ul li {
+  padding: 10px 10px;
+}
+
+.game-option {
+  display: inline-table;
+  color: #fff;
+  background: black;
+  padding: 20px 20px 60px;
+  width: 40%;
+  height: 100%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 1px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  opacity: 0.7;
+  cursor: pointer;
+  /* -webkit-transition: 0.2s; */
+  /* transition: opacity 0.2s; */
+  margin: 10px 0px 20px 0px;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 36px;
+  width: 18px;
+  border-radius: 4px;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+/* .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.btn {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.task {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.task.reminder {
+  border-left: 5px solid green;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add-form {
+  margin-bottom: 40px;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
+
+footer {
+  margin-top: 30px;
+  text-align: center;
+} */
