--- a/src/index.css
+++ b/src/index.css
@@ -176,93 +176,30 @@ body {
   cursor: pointer;
 }
 
-/* .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.btn {
-  display: inline-block;
-  background: #000;
+.card-deck {
   color: #fff;
-  border: none;
-  padding: 10px 20px;
-  margin: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: inherit;
+  background-color: aquamarine;
+  position: absolute;
+  top: 50vh;
+  left: calc(50vw - 100px);
 }
 
-.btn:focus {
-  outline: none;
+.card-in-hand {
+  color: #fff;
+  position: absolute;
+  bottom: 20px;
+  left: calc(50vw - 100px);
 }
 
-.btn:active {
-  transform: scale(0.98);
-}
-
-.btn-block {
-  display: block;
-  width: 100%;
-}
-
-.task {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
+.card-in-hand h1 {
+  display: inline;
+  background-color: red;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 800;
+  /* margin-right: 30%;
+  margin-left: 30%; */
+  margin: 10px;
+  padding: 10px;
   cursor: pointer;
 }
-
-.task.reminder {
-  border-left: 5px solid green;
-}
-
-.task h3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.add-form {
-  margin-bottom: 40px;
-}
-
-.form-control {
-  margin: 20px 0;
-}
-
-.form-control label {
-  display: block;
-}
-
-.form-control input {
-  width: 100%;
-  height: 40px;
-  margin: 5px;
-  padding: 3px 7px;
-  font-size: 17px;
-}
-
-.form-control-check {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.form-control-check label {
-  flex: 1;
-}
-
-.form-control-check input {
-  flex: 2;
-  height: 20px;
-}
-
-footer {
-  margin-top: 30px;
-  text-align: center;
-} */
