--- a/src/index.css
+++ b/src/index.css
@@ -234,6 +234,12 @@ body {
   top: 10px;
 }
 
+.last-played-cards {
+  position: absolute;
+  top: 10vh;
+  left: calc(50vw - 100px);
+}
+
 @media screen and (max-width: 600px) {
   .btn-play-card {
     right: 0px;
