--- a/src/index.css
+++ b/src/index.css
@@ -227,15 +227,72 @@ body {
   width: 140px;
 }
 
-.other-player-in-game {
+.players-in-game {
   position: absolute;
   right: 10px;
   padding: 10px;
   top: 10px;
 }
 
+.player-ui {
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  margin: 10px;
+}
+
+.avatar {
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  border-color: #1b1b1b;
+  background-color: #d3d3d3;
+  color: #000;
+}
+
+.player-info {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  height: 50px;
+}
+
+.player-heading {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 60%;
+  font-size: 20px;
+}
+
+.player-name {
+  color: white;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.player-card-number {
+  color: white;
+  border: 2px solid silver;
+  border-radius: 30%;
+  background-color: black;
+}
+
+.player-detail {
+  font-size: 15px;
+  width: 100%;
+  height: 40%;
+  color: grey;
+  padding-left: 10px;
+}
+
 .last-played-cards {
   position: absolute;
+  display: flex;
   top: 10vh;
   left: calc(50vw - 100px);
 }
