--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+span {
+  color: red;
+}
+
 .container {
   background: #000;
   background-size: cover;
