--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,14 @@ span {
   margin: auto;
 }
 
+.version-text {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 16px;
+  color: white;
+}
+
 .text-input {
   width: 100%;
   height: 40px;
